# SimpleChatUDP

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUBMISSION_CHECKLIST.md
scripts/: build.sh  launch_2_nodes.sh  launch_4_nodes.sh  run_tests.sh  stop_all.sh
src/: chatwindow.cpp  chatwindow.h  chatwindow_complex.cpp.backup  chatwindow_complex.h.backup  main.cpp  message.cpp  message.h  networkmanager.cpp  networkmanager.h  simplechat.cpp  simplechat.h
tests/: CMakeLists.txt  test_basic.cpp
